// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Public view should render children when they are present 1`] = `
<ContextProvider
  value={[]}
>
  <div>
    <div>
      <TopbarPublic
        onDownload={[Function]}
      />
      <WithContentRect
        fetchMore={[MockFunction]}
        hasMore={false}
        lists={
          [
            {
              "photos": [
                1,
                2,
                3,
              ],
            },
          ]
        }
        onPhotoToggle={[Function]}
        onPhotosSelect={[Function]}
        onPhotosUnselect={[Function]}
        photosContext="shared_album"
        selected={[]}
        showSelection={false}
      />
      <Outlet />
    </div>
  </div>
</ContextProvider>
`;

exports[`Public view should render the album 1`] = `
<ContextProvider
  value={[]}
>
  <div>
    <div>
      <TopbarPublic
        onDownload={[Function]}
      />
      <WithContentRect
        fetchMore={[MockFunction]}
        hasMore={false}
        lists={
          [
            {
              "photos": [],
            },
          ]
        }
        onPhotoToggle={[Function]}
        onPhotosSelect={[Function]}
        onPhotosUnselect={[Function]}
        photosContext="shared_album"
        selected={[]}
        showSelection={false}
      />
      <Outlet />
    </div>
  </div>
</ContextProvider>
`;
